[gd_scene load_steps=12 format=2]

[ext_resource path="res://asset/Object/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/Scripts/main.gd" type="Script" id=2]
[ext_resource path="res://asset/Object/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://asset/Scripts/ScoreLabel.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0.521569, 0.0117647, 1 )

[sub_resource type="Curve3D" id=5]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -13.1177, 0, -15.2982, 0, 0, 0, 0, 0, 0, 14.336, 0, -15.5102, 0, 0, 0, 0, 0, 0, 14.124, 0, 17.4554, 0, 0, 0, 0, 0, 0, -14.0717, 0, 17.6674, 0, 0, 0, 0, 0, 0, -13.1177, 0, -15.2982 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[sub_resource type="DynamicFont" id=6]
size = 29
font_data = ExtResource( 4 )

[node name="main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )
skeleton = NodePath("../CollisionShape")

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.547248, 0.615737, 0.566911, 0.567881, -0.224415, 0.791927, 0.614842, 0.755318, -0.226855, 0, 22.7105, 0 )
shadow_enabled = true

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0296869, -0.447019, 19.4513 )
projection = 1
size = 20.802

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Cylinders" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.268, 0, -15.1764 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.3585, 0, -15.3884 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.1768, 0, 17.2512 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.8697, 0, 17.389 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="SpawnPath" type="Path" parent="."]
curve = SubResource( 5 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.1177, 0, -15.2982 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScoreLabel" type="Label" parent="UserInterface"]
margin_left = 17.0
margin_top = 11.0
margin_right = 116.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Score:0"
script = ExtResource( 5 )

[node name="Retry" type="ColorRect" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.470588 )

[node name="Label" type="Label" parent="UserInterface/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.5
margin_top = -18.5
margin_right = 147.5
margin_bottom = 18.5
custom_colors/font_color = Color( 0.152941, 0.223529, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "Press Enter to Retry"
align = 1
valign = 1

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
